--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-calendars": "^1.1307.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0"
   },
